[gd_scene load_steps=11 format=3 uid="uid://bs58hppdbx8un"]

[ext_resource type="Script" path="res://robots/regbot/Regbot.gd" id="1_qh8t2"]
[ext_resource type="PackedScene" uid="uid://c081p7wp0ufyi" path="res://robots/regbot/RobotModel.glb" id="1_rgdcl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_knpk0"]
size = Vector3(0.6, 0.3, 0.6)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wkedi"]
height = 0.4
radius = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_kwig4"]
size = Vector3(0.2, 0.2, 0.4)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vkoqm"]
radius = 0.025344
height = 0.25344

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nx6qr"]
radius = 0.025344
height = 0.25344

[sub_resource type="CylinderShape3D" id="CylinderShape3D_k5wgn"]
height = 1.0
radius = 0.25

[sub_resource type="SphereShape3D" id="SphereShape3D_ms3c8"]
radius = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_xtko8"]
radius = 0.2

[node name="RobotModel" instance=ExtResource("1_rgdcl")]
script = ExtResource("1_qh8t2")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/3/rest = Transform3D(0.995125, -0.0979583, -0.0114262, 0.0979583, 0.968345, 0.229593, -0.0114261, -0.229593, 0.97322, 0, 0.29568, 0)
bones/3/rotation = Quaternion(-0.115716, -1.90103e-08, 0.0493714, 0.992055)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rest = Transform3D(0, 1, -2.38419e-07, -1, 0, 3.13917e-07, 3.13917e-07, 2.38419e-07, 1, 0.16896, 0.3168, 4.02832e-08)
bones/4/rotation = Quaternion(-2.66926e-08, -1.9528e-07, -0.707107, 0.707107)
bones/6/rest = Transform3D(1, -3.29377e-08, -7.56384e-09, 3.29377e-08, 0.899814, 0.436274, -7.56382e-09, -0.436274, 0.899814, 0, 0.25344, 0)
bones/6/rotation = Quaternion(-0.223815, -3.64519e-15, 1.68975e-08, 0.974632)
bones/7/rest = Transform3D(0.848613, 0.435385, -0.300492, -0.435385, 0.25216, -0.864208, -0.300492, 0.864208, 0.403546, 2.22316e-08, 0.0774559, -2.17181e-08)
bones/7/position = Vector3(2.22316e-08, 0.0774559, -2.17181e-08)
bones/7/rotation = Quaternion(0.546102, -9.41619e-09, -0.275124, 0.791252)

[node name="Physical Bone Base" type="PhysicalBone3D" parent="Armature/Skeleton3D" index="18"]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, -0.000882238, 0.174651, 0)
collision_layer = 32
collision_mask = 62
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1584)
body_offset = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.1584, 0)
bone_name = "Base"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/Physical Bone Base" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -2.98023e-08)
shape = SubResource("BoxShape3D_knpk0")

[node name="Physical Bone Body" type="PhysicalBone3D" parent="Armature/Skeleton3D" index="19"]
transform = Transform3D(1, 2.38419e-07, 0, 0, 0, -1, -2.38419e-07, 1, 0, -0.000882238, 0.597051, 0)
collision_layer = 32
collision_mask = 62
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.264)
body_offset = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.264, 0)
bone_name = "Body"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/Physical Bone Body" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0.05)
shape = SubResource("CylinderShape3D_wkedi")

[node name="Physical Bone Head" type="PhysicalBone3D" parent="Armature/Skeleton3D" index="20"]
transform = Transform3D(1, 2.3732e-07, 0, 0, 0, -1, -2.3732e-07, 1, 0, -0.000882238, 1.00889, 0)
collision_layer = 32
collision_mask = 62
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.14784)
body_offset = Transform3D(1, -1.0983e-09, 0, 0, 0, -1, 1.0983e-09, 1, 0, 0, 0.14784, 0)
bone_name = "Head"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/Physical Bone Head" index="0"]
transform = Transform3D(1, 0, -3.08376e-12, 3.08376e-12, 0, 1, 0, -1, 0, 0, 1.49012e-08, 0.05)
shape = SubResource("BoxShape3D_kwig4")

[node name="Physical Bone Arm" type="PhysicalBone3D" parent="Armature/Skeleton3D" index="21"]
transform = Transform3D(7.48435e-14, 5.68434e-14, -1, -1, 3.13917e-07, 0, 3.13917e-07, 1, 5.68434e-14, 0.294798, 0.649851, -1.0983e-09)
collision_layer = 32
collision_mask = 62
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09829e-09, 0.12672)
body_offset = Transform3D(1, 0, 0, 2.48469e-21, 0, -1, 0, 1, 0, 0, 0.12672, -1.09829e-09)
bone_name = "Arm"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/Physical Bone Arm" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_vkoqm")

[node name="Physical Bone Forearm" type="PhysicalBone3D" parent="Armature/Skeleton3D" index="22"]
transform = Transform3D(7.48435e-14, 5.68434e-14, -1, -1, 7.5498e-08, -6.72109e-28, 7.5498e-08, 1, 5.68434e-14, 0.548238, 0.649851, -2.16096e-14)
collision_layer = 32
collision_mask = 62
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.12672)
body_offset = Transform3D(1, 0, 0, 2.4847e-21, 0, -1, 0, 1, 0, 0, 0.12672, 0)
bone_name = "Forearm"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/Physical Bone Forearm" index="0"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_nx6qr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_k5wgn")

[node name="Eyes" type="Area3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.8, 0)
collision_mask = 30

[node name="CollisionShape3D" type="CollisionShape3D" parent="Eyes" index="0"]
shape = SubResource("SphereShape3D_ms3c8")

[node name="EyesBack" type="Area3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.8, 0)
collision_mask = 30

[node name="CollisionShape3D" type="CollisionShape3D" parent="EyesBack" index="0"]
shape = SubResource("SphereShape3D_xtko8")

[node name="FeetRayF" type="RayCast3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1, 0)
target_position = Vector3(0, -1.6, 0)
collision_mask = 30

[node name="FeetRayC" type="RayCast3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, -1.6, 0)
collision_mask = 30

[node name="FeetRayR" type="RayCast3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.2)
target_position = Vector3(0, -1.6, 0)
collision_mask = 30
